# sample-reusable-assets-toolkit

./: .gitignore  LICENSE  README.md  aws-nx-plugin.config.mts  eslint.config.mjs  ingestion-cli.md  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  ux.md  vitest.workspace.ts
docs/: architecture.drawio  ingest.drawio
