[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [
 "idp_code.agent",
]

[tool.uv.workspace]
members = [ "packages/agent" ]

[tool.uv.sources."idp_code.agent"]
workspace = true

[tool.uv]
constraint-dependencies = [
  "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
